Fix scrollbar styles of issue #1

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -36,7 +36,7 @@
     position: relative; /* Fix z-index of Safari */
     flex: 1;
     z-index: 1;
-    overflow: scroll;
+    overflow: auto;
   }
 
   .navbar {
